# pulseaudio-android

./: .gitignore  .gitmodules  main-build.sh
pulseaudio-module/: CMakeLists.txt  build.sh  create-asset.sh  module-aaudio-sink.c
